<resources>
    <string name="app_name">YenDoc</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvidaste_tu_constrasenia">¿Olvidaste tu constraseña?</string>
    <string name="nombre_app">YenDoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visitas">Visitas</string>
    <string name="visita">Visita</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desarrollada_por">Desarrollada Por:</string>
    <string name="vanina_aranda">Vanina Aranda</string>
    <string name="julian_simplituca">Julián Simplituca</string>
    <string name="julian_roman">Julián Román</string>
    <string name="carolina_andrea_d_alfonso">Carolina Andrea D\'Alfonso</string>
    <string name="nombre_generico">Nombre Médico</string>
    <string name="nombre_paciente">Nombre Paciente</string>
    <string name="direccion_generica">Dirección, Barrio, CABA</string>
    <string name="paciente">Paciente:</string>
    <string name="direccion">Dirección:</string>
    <string name="edad">Edad:</string>
    <string name="edad_generica">29 años</string>
    <string name="sintomas">Síntomas:</string>
    <string name="sintomas_genericos">Síntomas genéricos para el paciente descriptivos por él.</string>
    <string name="diagnostico_generico"></string>
    <string name="diagnostico">Diagnóstico:</string>
    <string name="fotos">Fotos</string>
    <string name="mapa">Mapa</string>
    <string name="detalle">Detalle</string>
    <string name="receta">Foto Receta</string>
    <string name="camara">Cámara</string>
    <string name="finalizar">Finalizar</string>
    <string name="pudo_atender_correctamente">¿Pudo atender correctamente al paciente?</string>
    <string name="usuario_contrasenia_obligatorio">Ingrese un usuario y contraseña</string>
    <string name="usuario_contrasenia_incorrecto">Usuario y/o contraseña incorrectos</string>
    <string name="salir">Salir</string>
    <string name="seguro_cerrar_sesion">¿Está seguro que desea cerrar sesión?</string>
    <string name="id_profesional">id_profesional</string>
    <string name="dashboard_fragment">DashboardFragment</string>
    <string name="about_fragment">AboutFragment</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="error">\"ERROR: \"</string>
    <string name="body">BODY</string>
    <string name="tabs_fragment">TabsFragment</string>
    <string name="nombre_profesional">nombre_profesional</string>
    <string name="id_visita">idVisita</string>
    <string name="usted_esta_aqui">Usted está aquí</string>
    <string name="id_paciente">id_paciente</string>
    <string name="diagnostico_completado">diagnostico_completado</string>
    <string name="yendoc_ruta">/yendoc</string>
    <string name="img_">Img_</string>
    <string name="data">data</string>
    <string name="d_jpg">%d.jpg</string>
</resources>