<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/nombre_app"
        android:textStyle="bold"
        android:textSize="80dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/desarrollada_por"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/desarrollada_por"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/desarrollador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/carolina_andrea_d_alfonso"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/desarrollador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/julian_roman"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/desarrollador3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/julian_simplituca"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/desarrollador4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/vanina_aranda"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.2" />
</LinearLayout>