<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp">

    <TextView
        android:id="@+id/texto_conectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/nombre_app"
        android:textStyle="bold"
        android:textSize="80dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="bottom"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/input_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/contrasenia"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:background="@drawable/rounded_corners"
        android:text="@string/iniciar_sesion" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/texto_olvidaste_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/olvidaste_tu_constrasenia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0E8AEE" />

</LinearLayout>