<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   >

        <TextView
            android:id="@+id/lblPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:hint="@string/paciente" />

        <TextView
            android:id="@+id/name_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/lblDireccion"
            android:layout_weight="0"
            android:paddingBottom="12dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lblDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:layout_below="@+id/lblPaciente"
            android:hint="@string/direccion" />

        <TextView
            android:id="@+id/address_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_paciente"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/lblDireccion"
            android:layout_weight="0"
            android:paddingBottom="12dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lblEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:layout_below="@+id/lblDireccion"
            android:hint="@string/edad" />

        <TextView
            android:id="@+id/age_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_paciente"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/lblDireccion"
            android:layout_weight="0"
            android:paddingBottom="12dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lblSintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:layout_below="@+id/lblEdad"
            android:hint="@string/sintomas" />

        <TextView
            android:id="@+id/symptom_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_paciente"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/lblDireccion"
            android:layout_weight="0"
            android:paddingBottom="12dp"
            android:text=""
            android:textColor="@color/black" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblDiagnostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:paddingRight="20dp"
            android:paddingBottom="0dp"
            android:hint="@string/diagnostico" />

        <EditText
            android:id="@+id/diagnostic"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textSize="15dp"
            android:gravity="top"
            android:text="" />

    </LinearLayout>

</LinearLayout>